--- a/graph-connector-app/teamsapp.local.yml
+++ b/graph-connector-app/teamsapp.local.yml
@@ -40,13 +40,15 @@ provision:
   # Validate using manifest schema
   - uses: teamsApp/validateManifest
     with:
-      manifestPath: appPackage/manifest.json # Path to manifest template
+      # Path to manifest template
+      manifestPath: ./appPackage/manifest.json
   # Build Teams app package with latest env value
   - uses: teamsApp/zipAppPackage
     with:
-      manifestPath: appPackage/manifest.json # Path to manifest template
-      outputZipPath: build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
-      outputJsonPath: build/appPackage/manifest.${{TEAMSFX_ENV}}.json
+      # Path to manifest template
+      manifestPath: ./appPackage/manifest.json
+      outputZipPath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip
+      outputJsonPath: ./appPackage/build/manifest.${{TEAMSFX_ENV}}.json
   # Apply the Teams app manifest to an existing Teams app in
   # Teams Developer Portal.
   # Will use the app id in manifest file to determine which Teams app to update.
