--- a/hello-world-tab-with-backend/teamsapp.yml
+++ b/hello-world-tab-with-backend/teamsapp.yml
@@ -51,13 +51,15 @@ provision:
   # Validate using manifest schema
   - uses: teamsApp/validateManifest
     with:
-      manifestPath: appPackage/manifest.json # Path to manifest template
+      # Path to manifest template
+      manifestPath: ./appPackage/manifest.json
   # Build Teams app package with latest env value
   - uses: teamsApp/zipAppPackage
     with:
-      manifestPath: appPackage/manifest.json # Path to manifest template
-      outputZipPath: build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
-      outputJsonPath: build/appPackage/manifest.${{TEAMSFX_ENV}}.json
+      # Path to manifest template
+      manifestPath: ./appPackage/manifest.json
+      outputZipPath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip
+      outputJsonPath: ./appPackage/build/manifest.${{TEAMSFX_ENV}}.json
   # Apply the Teams app manifest to an existing Teams app in
   # Teams Developer Portal.
   # Will use the app id in manifest file to determine which Teams app to update.
@@ -118,12 +120,14 @@ publish:
   # Validate using manifest schema
   - uses: teamsApp/validateManifest
     with:
-      manifestPath: appPackage/manifest.json # Path to manifest template
+      # Path to manifest template
+      manifestPath: ./appPackage/manifest.json
   - uses: teamsApp/zipAppPackage
     with:
-      manifestPath: appPackage/manifest.json # Path to manifest template
-      outputZipPath: build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
-      outputJsonPath: build/appPackage/manifest.${{TEAMSFX_ENV}}.json
+      # Path to manifest template
+      manifestPath: ./appPackage/manifest.json
+      outputZipPath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip
+      outputJsonPath: ./appPackage/build/manifest.${{TEAMSFX_ENV}}.json
   # Apply the Teams app manifest to an existing Teams app in
   # Teams Developer Portal.
   # Will use the app id in manifest file to determine which Teams app to update.
