--- a/todo-list-SPFx/teamsapp.local.yml
+++ b/todo-list-SPFx/teamsapp.local.yml
@@ -17,12 +17,14 @@ provision:
   # Validate using manifest schema
   - uses: teamsApp/validateManifest
     with:
-      manifestPath: ./appPackage/manifest.local.json # Path to manifest template
+      # Path to manifest template
+      manifestPath: ./appPackage/manifest.local.json
 
   # Build Teams app package with latest env value
   - uses: teamsApp/zipAppPackage
     with:
-      manifestPath: ./appPackage/manifest.local.json # Path to manifest template
+      # Path to manifest template
+      manifestPath: ./appPackage/manifest.local.json
       outputZipPath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip
       outputJsonPath: ./appPackage/build/manifest.${{TEAMSFX_ENV}}.json
   # Validate app package using validation rules
