--- a/team-central-dashboard/teamsapp.yml
+++ b/team-central-dashboard/teamsapp.yml
@@ -75,9 +75,10 @@ provision:
 
 deploy:
   - uses: devTool/install # Install development tool(s)
-    with:      
+    with:
       dotnet: true
-    writeToEnvironmentFile: # Write the information of installed development tool(s) into environment file for the specified environment variable(s).
+    writeToEnvironmentFile:
+      # Write the information of installed development tool(s) into environment file for the specified environment variable(s).
       dotnetPath: DOTNET_PATH
 
   - uses: cli/runNpmCommand # Run npm command
