--- a/team-central-dashboard/teamsapp.local.yml
+++ b/team-central-dashboard/teamsapp.local.yml
@@ -29,7 +29,7 @@ provision:
       run:
         echo "::set-teamsfx-env TAB_DOMAIN=localhost:53000";
         echo "::set-teamsfx-env TAB_ENDPOINT=https://localhost:53000";
-        echo "::set-teamsfx-env FUNC_NAME=finishTaskNotification";
+        echo "::set-teamsfx-env FUNC_NAME=callGraph";
         echo "::set-teamsfx-env FUNC_ENDPOINT=http://localhost:7071";
         
   - uses: aadApp/update
