--- a/team-central-dashboard/teamsapp.local.yml
+++ b/team-central-dashboard/teamsapp.local.yml
@@ -67,6 +67,9 @@ deploy:
     with:
       devCert:
         trust: true
+      func:
+        version: ~4.0.4670
+        symlinkDir: ./devTools/func
       dotnet: true
     # Write the information of installed development tool(s) into environment
     # file for the specified environment variable(s).
@@ -74,6 +77,7 @@ deploy:
       sslCertFile: SSL_CRT_FILE
       sslKeyFile: SSL_KEY_FILE
       dotnetPath: DOTNET_PATH
+      funcPath: FUNC_PATH
 
   - uses: cli/runNpmCommand # Run npm command
     with:
