--- a/todo-list-with-Azure-backend/.vscode/tasks.json
+++ b/todo-list-with-Azure-backend/.vscode/tasks.json
@@ -15,7 +15,7 @@
             "dependsOrder": "sequence"
         },
         {
-            // Check if all required prerequisites are installed and will install them if not.
+            // Check if all required prerequisites.
             // See https://aka.ms/teamsfx-tasks/check-prerequisites to know the details and how to customize the args.
             "label": "Validate prerequisites",
             "type": "teamsfx",
