--- a/graph-connector-app/.vscode/tasks.json
+++ b/graph-connector-app/.vscode/tasks.json
@@ -116,25 +116,7 @@
             "presentation": {
                 "reveal": "silent"
             },
-            "dependsOn": [
-                "Install Azure Functions binding extensions",
-                "Watch backend"
-            ]
-        },
-        {
-            // TeamsFx Azure Functions project depends on extra Azure Functions binding extensions for HTTP trigger authorization.
-            "label": "Install Azure Functions binding extensions",
-            "type": "shell",
-            "command": "dotnet build extensions.csproj -o ./bin --ignore-failed-sources",
-            "options": {
-                "cwd": "${workspaceFolder}/api",
-                "env": {
-                    "PATH": "${command:fx-extension.get-dotnet-path}${env:PATH}"
-                }
-            },
-            "presentation": {
-                "reveal": "silent"
-            }
+            "dependsOn": "Watch backend"
         },
         {
             "label": "Watch backend",
