--- a/hello-world-tab-with-backend/teamsapp.local.yml
+++ b/hello-world-tab-with-backend/teamsapp.local.yml
@@ -68,12 +68,14 @@ deploy:
       func:
         version: ~4.0.4670
         symlinkDir: ./devTools/func
+      dotnet: true
     # Write the information of installed development tool(s) into environment
     # file for the specified environment variable(s).
     writeToEnvironmentFile:
       sslCertFile: SSL_CRT_FILE
       sslKeyFile: SSL_KEY_FILE
       funcPath: FUNC_PATH
+      dotnetPath: DOTNET_PATH
 
   - uses: cli/runNpmCommand # Run npm command
     with:
@@ -83,6 +85,13 @@ deploy:
     with:
       args: install --no-audit
       workingDirectory: api
+
+  # TeamsFx Azure Functions project depends on extra Azure Functions binding extensions for HTTP trigger authorization.
+  - uses: cli/runDotnetCommand
+    with:
+      workingDirectory: api
+      args: build extensions.csproj -o bin --ignore-failed-sources
+      execPath: ${{DOTNET_PATH}}
 
   # Generate runtime environment variables for tab
   - uses: file/createOrUpdateEnvironmentFile
