ci: update code owner

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -35,4 +35,4 @@
 /todo-list-with-Azure-backend @adashen @formulahendry
 /todo-list-with-Azure-backend-M365 @kimizhu @swatDong @kuojianlu
 /developer-assist-dashboard @eriolchan @huimiu @hund030 @JerryYangKai
-/.github/workflows/cd.yml @adashen @LongOddCode @IvanJobs @qinezh @wenytang-ms
+/.github/workflows/cd.yml @adashen @LongOddCode @Siglud @qinezh @wenytang-ms
