--- a/query-org-user-with-message-extension-sso/teamsapp.local.yml
+++ b/query-org-user-with-message-extension-sso/teamsapp.local.yml
@@ -91,7 +91,7 @@ deploy:
       envs:
         BOT_ID: ${{BOT_ID}}
         BOT_PASSWORD: ${{SECRET_BOT_PASSWORD}}
-        BOT_ENDPOINT: ${{BOT_ENDPOINT}}
+        BOT_DOMAIN: ${{BOT_DOMAIN}}
         AAD_APP_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
         AAD_APP_CLIENT_SECRET: ${{SECRET_AAD_APP_CLIENT_SECRET}}
         AAD_APP_TENANT_ID: ${{AAD_APP_TENANT_ID}}
