--- a/graph-connector-app/teamsapp.yml
+++ b/graph-connector-app/teamsapp.yml
@@ -65,7 +65,7 @@ provision:
   # Will use the app id in manifest file to determine which Teams app to update.
   - uses: teamsApp/update
     with:
-      appPackagePath: build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to teamsfx folder. This is the path for built zip file.
+      appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to teamsfx folder. This is the path for built zip file.
 
 deploy:
   # Install development tool(s)
@@ -142,7 +142,7 @@ publish:
   # for review and approval
   - uses: teamsApp/publishAppPackage
     with:
-      appPackagePath: build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
+      appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip
     # Write the information of created resources into environment file for
     # the specified environment variable(s).
     writeToEnvironmentFile:
