--- a/incoming-webhook-notification/package.json
+++ b/incoming-webhook-notification/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com"
   },
   "dependencies": {
+    "adaptivecards": "^2.11.1",
     "adaptivecards-templating": "^2.3.1",
     "adaptive-expressions": "^4.22.3",
     "axios": "^0.26.1"
