--- a/genai-gateway/teamsapp.local.yml
+++ b/genai-gateway/teamsapp.local.yml
@@ -4,31 +4,6 @@
 version: v1.7
 
 provision:
-  - uses: arm/deploy # Deploy given ARM templates parallelly.
-    with:
-      # AZURE_SUBSCRIPTION_ID is a built-in environment variable,
-      # if its value is empty, TeamsFx will prompt you to select a subscription.
-      # Referencing other environment variables with empty values
-      # will skip the subscription selection prompt.
-      subscriptionId: ${{AZURE_SUBSCRIPTION_ID}}
-      # AZURE_RESOURCE_GROUP_NAME is a built-in environment variable,
-      # if its value is empty, TeamsFx will prompt you to select or create one
-      # resource group.
-      # Referencing other environment variables with empty values
-      # will skip the resource group selection prompt.
-      resourceGroupName: ${{AZURE_RESOURCE_GROUP_NAME}}
-      templates:
-        - path: ./infra/azure.local.bicep # Relative path to this file
-          # Relative path to this yaml file.
-          # Placeholders will be replaced with corresponding environment
-          # variable before ARM deployment.
-          parameters: ./infra/azure.local.parameters.json
-          # Required when deploying ARM template
-          deploymentName: Create-resources-for-bot
-      # Teams Toolkit will download this bicep CLI version from github for you,
-      # will use bicep CLI in PATH if you remove this config.
-      bicepCliVersion: v0.9.1
-
   # Creates a Teams app
   - uses: teamsApp/create
     with:
@@ -63,6 +38,37 @@ provision:
       description: ""
       channels:
         - name: msteams
+
+  - uses: arm/deploy # Deploy given ARM templates parallelly.
+    with:
+      # AZURE_SUBSCRIPTION_ID is a built-in environment variable,
+      # if its value is empty, TeamsFx will prompt you to select a subscription.
+      # Referencing other environment variables with empty values
+      # will skip the subscription selection prompt.
+      subscriptionId: ${{AZURE_SUBSCRIPTION_ID}}
+      # AZURE_RESOURCE_GROUP_NAME is a built-in environment variable,
+      # if its value is empty, TeamsFx will prompt you to select or create one
+      # resource group.
+      # Referencing other environment variables with empty values
+      # will skip the resource group selection prompt.
+      resourceGroupName: ${{AZURE_RESOURCE_GROUP_NAME}}
+      templates:
+        # - path: ./infra/apimDeployment/azure.local.bicep # Relative path to this file
+        #   # Relative path to this yaml file.
+        #   # Placeholders will be replaced with corresponding environment
+        #   # variable before ARM deployment.
+        #   parameters: ./infra/apimDeployment/azure.local.parameters.json
+        #   # Required when deploying ARM template
+        #   deploymentName: Create-resources-for-bot
+
+        # Deploy all APIM modules with a single main deployment
+        - path: ./infra/apim/main.bicep
+          parameters: ./infra/apim/main.parameters.json
+          deploymentName: Deploy-APIM-Resources
+
+      # Teams Toolkit will download this bicep CLI version from github for you,
+      # will use bicep CLI in PATH if you remove this config.
+      bicepCliVersion: v0.9.1
 
   # Validate using manifest schema
   - uses: teamsApp/validateManifest
